Fix: Ensured FastAPI is detected by Vercel

--- a/vercel.json
+++ b/vercel.json
@@ -2,15 +2,14 @@
     "version": 2,
     "builds": [
       {
-        "src": "api.py",
+        "src": "index.py",
         "use": "@vercel/python"
       }
     ],
     "routes": [
       {
         "src": "/(.*)",
-        "dest": "api.py"
+        "dest": "index.py"
       }
     ]
-  }
-  
+  }  
